tests/saved_state_reinit_libdef_change_mergebase/saved_state_reinit_libdef_change_mergebase.exp
Scenario 1: upstream libdef change
Before recheck:
No errors!

The Flow server is currently in lazy mode and is only checking 0/1 source files (+ 2/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
After recheck:
No errors!

The Flow server is currently in lazy mode and is only checking 0/1 source files (+ 0/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
Used saved-state reinit:
yes
Did NOT fall back to reinit_full_check:
yes

Scenario 2: local libdef change
Before recheck:
No errors!

The Flow server is currently in lazy mode and is only checking 0/1 source files (+ 2/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
After recheck:
Error ------------------------------------------------------------------------------------------------------ test.js:2:1

Cannot cast `myGlobal` to string because boolean [1] is incompatible with string [2]. [incompatible-type]

   test.js:2:1
   2| myGlobal as string;
      ^^^^^^^^

References:
   libs/lib.js:2:23
   2| declare var myGlobal: boolean;
                            ^^^^^^^ [1]
   test.js:2:13
   2| myGlobal as string;
                  ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 1/1 source files (+ 2/2 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
Tried saved-state reinit:
yes
Fell back to reinit_full_check:
yes

